@@ -1,11 +1,11 @@
 --- #YAML:1.0
 name:                SMS-Send-US-Ipipi
-version:             0.02
+version:             0.03
 abstract:            An SMS::Send driver for the ipipi.com website
 license:             ~
 author:              
     - Andrew Moore <andrew.moore@liblime.com>
-generated_by:        ExtUtils::MakeMaker version 6.38
+generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
     Carp:                          0
