@@ -8,11 +8,11 @@ SMS::Send::US::Ipipi - An SMS::Send driver for the ipipi.com website
 
 =head1 VERSION
 
-Version 0.02
+Version 0.03
 
 =cut
 
-our $VERSION = '0.02';
+our $VERSION = '0.03';
 
 =head1 SYNOPSIS
 
